# glyph

./: .gitignore  .lintstagedrc.mjs  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  codecov.yml  index.html  markdown-extensions.json  package.json  playwright.config.ts  pnpm-lock.yaml  sample.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: launch.json  settings.json
.claude/agents/: builder.md  code-reviewer.md  tester.md  ui-inspector.md
.claude/commands/: implement.md  plan.md  ship.md  spec.md
.claude/rules/: app-shell.md  ci-hygiene.md  cleanup.md  code-organization.md  docs.md  frontend.md  github.md  i18n.md  rust.md  sentry.md  sibling-repos.md  tests.md  worktrees.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: code-simplifier.agent.md
.github/matchers/: rust.json
.github/workflows/: build.yml  ci-build.yml  ci-checks.yml  ci-smoke.yml  ci-tests.yml  ci.yml  create-release.yml  dependabot-tauri-npm-sync.yml  pr-labeler.yml  pr-title-conventional.yml  release-smoke-test.yml  release.yml  security.yml  tap-token-test.yml  tests.yml
.husky/: pre-commit  pre-push
aur/: .SRCINFO  PKGBUILD
chocolatey/: glyph.nuspec
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
dnf/: glyph.repo
docs/assets/: README.md
docs/security/: threat-model.md
e2e/: cspPage.ts  cspSurfaces.spec.ts  d2Csp.spec.ts
examples/plugins/: README.md  index.json
flatpak/: com.hamidfzm.glyph.desktop  com.hamidfzm.glyph.metainfo.xml  com.hamidfzm.glyph.yml
homebrew/: glyph-formula.rb.template  glyph.rb.template
msstore/: README.md
ppa/debian/: changelog  control  copyright  install  rules
samples/: AI Playground.md  Architecture.d2  Flowchart.mmd  Graph View.md  Index.md  Notebook.ipynb  README.md  Scratchpad.md  canvas-demo.canvas
samples/.glyph/: site.json
samples/Notes/: Cooking.md  Cooking.mmd  Ingredients.md  Relative-Links.md  Techniques.md
scoop/: glyph.json.template
scripts/: sync-tauri-npm-versions.mjs
snap/: snapcraft.yaml
src/: main.tsx  pdfmake-build.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  audit.toml  build.rs  sentry.json  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: canvas.rs  cli.rs  commands.rs  d2.rs  grants.rs  image.rs  lib.rs  main.rs  markdown.rs  menu.rs  menu_runtime.rs  menu_runtime_mobile.rs  notebook.rs  secrets.rs  telemetry.rs  telemetry_mobile.rs  watcher.rs  windows.rs  windows_runtime.rs
src-tauri/src/commands/: ai_keys.rs  create.rs  custom_css.rs  default_app.rs  directory.rs  export.rs  export_runtime.rs  file.rs  pick.rs  pick_mobile.rs  plugins.rs  secrets.rs  walk.rs  wikilinks.rs
src-tauri/src/commands/plugins/: manifest.rs  mod.rs  store.rs  test_support.rs  tests.rs
src-tauri/src/sync/: backend.rs  commands.rs  commands_mobile.rs  config.rs  error.rs  git.rs  mod.rs  ops.rs  state.rs  state_mobile.rs
src-tauri/src/sync/git/: backend.rs  credentials.rs  message.rs  mod.rs  repo.rs  tests.rs
src-tauri/src/workspace/: commands.rs  config.rs  mod.rs  paths.rs  resolve.rs
src/components/: AIPanel.tsx  App.test.tsx  App.tsx  AppShell.tsx  EmptyState.tsx  ErrorFallback.test.tsx  ErrorFallback.tsx  MarkdownViewer.tsx  PlatformGate.test.tsx  PlatformGate.tsx  SettingsModal.tsx  ShowOn.test.tsx  ShowOn.tsx  Sidebar.tsx  StatusBar.tsx  TabContent.test.tsx  TabContent.tsx  Titlebar.tsx
src/contexts/: EmbedContext.ts  LightboxContext.test.tsx  LightboxContext.ts  LightboxContext.tsx  LightboxProvider.tsx  PluginsContext.test.tsx  PluginsContext.ts  PluginsContext.tsx  PluginsProvider.test.tsx  PluginsProvider.tsx  SettingsContext.test.tsx  SettingsContext.ts  SettingsContext.tsx  SettingsProvider.tsx  SidebarLayoutContext.test.tsx  SidebarLayoutContext.ts  SidebarLayoutContext.tsx  SidebarLayoutProvider.tsx  SyncConfigContext.test.tsx  SyncConfigContext.ts  SyncConfigContext.tsx  SyncConfigProvider.tsx  TabsContext.test.tsx  TabsContext.ts  TabsContext.tsx  TabsProvider.tsx  WorkspaceRootContext.test.tsx  WorkspaceRootContext.tsx  ZoomContext.ts  ZoomProvider.test.tsx  ZoomProvider.tsx
src/hooks/: useAI.test.ts  useAI.ts  useAIChat.test.ts  useAIChat.ts  useAIController.test.ts  useAIController.ts  useActiveHeading.test.ts  useActiveHeading.ts  useAppCommands.test.ts  useAppCommands.ts  useAutoSave.test.ts  useAutoSave.ts  useCanvasDocument.test.ts  useCliExport.ts  (+104 more)
winget/: README.md  hamidfzm.Glyph.installer.yaml  hamidfzm.Glyph.locale.en-US.yaml  hamidfzm.Glyph.yaml
(+615 files in other folders)
