[package]
name = "glyph"
version = "0.3.0"
description = "A cross-platform markdown viewer"
authors = ["hamidfzm"]
edition = "2021"

[lib]
name = "glyph_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-cli = "2"
tauri-plugin-window-state = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
tauri-plugin-opener = "2.5.3"
